--- a/themes/paper/layouts/_default/list.html
+++ b/themes/paper/layouts/_default/list.html
@@ -21,17 +21,7 @@
 {{ $avatar_url := $.Scratch.Get "avatar_url" }}<!---->
 {{ if or $avatar_url site.Params.name }}
 <div class="-mt-2 mb-16 flex items-center">
-  {{ if $avatar_url }}
-  <div
-    class="mr-5 shrink-0 rounded-full border-[0.5px] border-black/10 bg-white/50 p-3 shadow dark:bg-white/[15%]"
-  >
-    <img
-      class="my-0 aspect-square w-16 rounded-full !bg-black/5 hover:animate-spin dark:!bg-black/80"
-      src="{{ $avatar_url }}"
-      alt="{{ site.Params.name | default site.Title }}"
-    />
-  </div>
-  {{ end }}<!---->
+  
   {{ if site.Params.name }}
   <div>
     <h1 class="mb-2 mt-3 text-[1.6rem] font-bold">{{ site.Params.name }}</h1>
@@ -54,9 +44,7 @@
   >
   {{ end }}
   <h2 class="!my-0 pb-1 font-bold !leading-none">{{ .Title }}</h2>
-  <time class="text-sm antialiased opacity-60"
-    >{{ .Date | time.Format ":date_medium" }}</time
-  >
+  <div class="event">{{ .Content }}</div>
   <a class="absolute inset-0 text-[0]" href="{{ .Permalink }}">{{ .Title }}</a>
 </section>
 {{ end }}
