--- a/themes/paper/layouts/_default/baseof.html
+++ b/themes/paper/layouts/_default/baseof.html
@@ -42,10 +42,12 @@
     {{ partial "header.html" . }}
 
     <main
-      class="prose prose-neutral relative mx-auto min-h-[calc(100%-9rem)] max-w-3xl px-8 pb-16 pt-12 dark:prose-invert"
+      class="prose prose-neutral relative mx-auto min-h-[calc(100%-12rem)] max-w-3xl px-8 pb-16 pt-12 dark:prose-invert"
     >
       {{ block "main" . }}{{ end }}
     </main>
+
+    {{ partial "subscribe-form.html" . }}
 
     {{ partial "footer.html" . }}
   </body>
