--- a/themes/paper/layouts/partials/subscribe-form.html
+++ b/themes/paper/layouts/partials/subscribe-form.html
@@ -1,9 +1,9 @@
-<div style="color: white; min-height: 20vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px;">
+<div style="color:black; min-height: 20vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px;">
     <div style="height: 160px; display: flex; flex-direction: column; justify-content: center;">
-        <h1 style="font-size: 32px; margin-bottom: 16px; padding: 16px;">Subscribe to HYD-Events</h1>
-        <p style="font-size: 18px; margin-bottom: 24px; text-align: center;">Stay up-to-date with the latest events in Hyderabad.</p>
+        <h1 style="color: white;font-size: 32px; margin-bottom: 16px; padding: 16px;">Subscribe to HYD-Events</h1>
+        <p style="color: white;font-size: 18px; margin-bottom: 24px; text-align: center;">Stay up-to-date with the latest events in Hyderabad.</p>
 
-        <form id="subscribe-form" style="width: 100%; max-width: 750px;">
+        <form id="subscribe-form" style="width: 400px; max-width: 750px;">
             <input type="email" id="email-input" placeholder="Your email" required style="width: 100%; padding: 16px; margin-bottom: 16px; background-color: white; color: black;">
             <button type="submit" style="width: 100%; padding: 8px; background-color: black; border: 2px solid white; color: white;">Subscribe</button>
         </form>
