--- a/themes/paper/layouts/partials/header.html
+++ b/themes/paper/layouts/partials/header.html
@@ -61,6 +61,8 @@
       setDark(localStorage.getItem('dark') !== 'true');
     });
   </script>
+  <script defer data-domain="events.ksridhar.dev" src="https://plausible.vramana.com/js/script.js"></script>
+
 
   
 </header>
